<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="enter_search_query">Enter Search Query</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_value">Sort Order</string>
    <string name="news_desk_value">News Desk Value</string>
    <string name="cb_arts">Arts</string>
    <string name="cb_fashion">Fashion</string>
    <string name="cb_sports">Sports</string>
</resources>
